--- a/index.html
+++ b/index.html
@@ -3,72 +3,97 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Event Check-In</title>
+  <title>JTSC Awards Banquet</title>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
   <style>
     body {
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      font-family: 'Poppins', sans-serif;
       margin: 0;
       padding: 20px;
-      background: linear-gradient(to right, #f5f7fa, #c3cfe2);
-      color: #333;
+      background: linear-gradient(to right, #f0f2f5, #e4e4e4);
+      color: #222;
     }
     h2 {
       text-align: center;
       color: #7D2248;
-      font-size: 28px;
-      margin-bottom: 20px;
-    }
-    input, button {
-      font-size: 16px;
+      font-size: 32px;
+      border-bottom: 3px solid #7D2248;
+      display: inline-block;
+      padding-bottom: 6px;
+      margin: 0 auto 30px auto;
     }
     .form-group {
       margin-bottom: 16px;
     }
     .form-section {
       background: #fff;
-      padding: 20px;
+      padding: 0 20px;
       margin-bottom: 20px;
       border-radius: 12px;
-      box-shadow: 0 4px 10px rgba(0,0,0,0.1);
+      box-shadow: 0 6px 20px rgba(0, 0, 0, 0.08);
+      max-height: 0;
+      overflow: hidden;
+      transition: max-height 0.5s ease-out, padding 0.3s ease-out;
     }
-    label {
-      display: block;
-      margin-bottom: 6px;
-      font-weight: 600;
+    .form-section.show {
+      max-height: 700px;
+      padding: 20px;
     }
-    input[type="text"], input[type="email"], input[type="number"] {
+    input[type="text"], input[type="email"], input[type="number"], input[type="search"] {
       padding: 10px;
       width: 100%;
       border-radius: 8px;
-      border: 1px solid #ccc;
+      border: 1px solid #bbb;
+      margin-top: 5px;
       box-sizing: border-box;
+    }
+    label {
+      font-weight: 600;
+      display: block;
+      margin-bottom: 4px;
     }
     .btn-primary {
       background-color: #7D2248;
-      color: white;
-      padding: 10px 20px;
+      color: #fff;
       border: none;
+      padding: 12px 24px;
       border-radius: 8px;
       cursor: pointer;
-      transition: background-color 0.3s ease, transform 0.2s;
+      transition: all 0.3s ease;
     }
     .btn-primary:hover {
-      background-color: #5c1a37;
-      transform: scale(1.05);
+      background-color: #5a1735;
+      transform: translateY(-2px);
+      box-shadow: 0 6px 12px rgba(125, 34, 72, 0.3);
     }
     .btn-primary:active {
-      transform: scale(0.95);
+      transform: scale(0.98);
+    }
+    .btn-icon {
+      display: inline-flex;
+      align-items: center;
+      gap: 8px;
+    }
+    .btn-icon svg {
+      width: 18px;
+      height: 18px;
+      fill: white;
+    }
+    #search {
+      margin-bottom: 20px;
+      border: 2px solid #ddd;
     }
     table {
       width: 100%;
       border-collapse: collapse;
       background: white;
-      border-radius: 12px;
+      border-radius: 10px;
       overflow: hidden;
-      box-shadow: 0 4px 12px rgba(0,0,0,0.1);
+      box-shadow: 0 4px 14px rgba(0,0,0,0.07);
+      animation: fadeIn 0.6s ease-out;
     }
     th, td {
-      padding: 12px;
+      padding: 14px;
       text-align: left;
     }
     th {
@@ -77,11 +102,23 @@
       font-weight: 600;
     }
     tr:nth-child(even) {
-      background-color: #f2f2f2;
+      background-color: #f8f8f8;
+    }
+    tr:hover {
+      background-color: #f0e6ec;
     }
     .checked-in {
-      background-color: #d1e7dd !important;
-      transition: background-color 0.3s ease-in-out;
+      background-color: #d4edda !important;
+    }
+    @keyframes fadeIn {
+      from {opacity: 0; transform: translateY(10px);}
+      to {opacity: 1; transform: translateY(0);}
+    }
+    footer {
+      margin-top: 40px;
+      text-align: center;
+      font-size: 14px;
+      color: #555;
     }
     @media (max-width: 768px) {
       table, thead, tbody, th, td, tr {
@@ -106,12 +143,21 @@
     }
   </style>
 </head>
-<body>
-  <h2>Event Check-In App</h2>
+  <body>
+  <div style="display: flex; align-items: center; justify-content: center; gap: 20px; margin-bottom: 30px;">
+  <img src="Jenks_Trojan_Black_RGB (1).png" alt="JTSC Logo" style="max-height: 80px;">
+  <h2 style="margin: 0; font-size: 32px; color: #7D2248; border-bottom: none;">🏆 JTSC Awards Banquet 🎉</h2>
+</div>
+<div style="text-align:center; margin: 10px auto 30px auto; font-weight:600; font-size:18px;">
+  <span id="swimmer-summary"></span>
+</div>
 
-  <button class="btn-primary" onclick="toggleAddGuest()" style="margin-bottom: 20px;">+ Add Guest</button>
+  <button class="btn-primary btn-icon" onclick="toggleAddGuest()" style="margin-bottom: 20px;">
+    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M12 5v14m-7-7h14" stroke="white" stroke-width="2" stroke-linecap="round"/></svg>
+    Add Guest
+  </button>
 
-  <div class="form-section" id="add-guest-form" style="display:none">
+  <div class="form-section" id="add-guest-form">
     <h3 style="color:#7D2248">Add Guest</h3>
     <div class="form-group">
       <label for="guest-name">Name</label>
@@ -151,7 +197,7 @@
 
     function toggleAddGuest() {
       const form = document.getElementById("add-guest-form");
-      form.style.display = form.style.display === "none" ? "block" : "none";
+      form.classList.toggle("show");
     }
 
     function loadAttendees() {
@@ -161,6 +207,9 @@
           const tableBody = document.getElementById("table-body");
           tableBody.innerHTML = "";
           data.forEach(row => renderRow(row));
+          const checkedInCount = data.filter(r => r.checked_in === 'yes').length;
+          const totalGuests = data.reduce((acc, row) => acc + parseInt(row.attendees || 0), 0);
+                    document.getElementById("swimmer-summary").innerHTML = `👨‍👩‍👧‍👦 Swimmers Checked In: <strong>${checkedInCount}</strong> / 🏊 Total Swimmers: <strong>${data.length}</strong>`;
         });
     }
 
@@ -190,6 +239,7 @@
         const row = button.parentElement.parentElement;
         row.classList.toggle("checked-in", !checkedIn);
         button.textContent = checkedIn ? "Check In" : "Uncheck";
+        loadAttendees();
       });
     }
 
@@ -231,6 +281,7 @@
       .then(res => res.json())
       .then(() => {
         renderRow(guest);
+        loadAttendees();
         document.getElementById("guest-name").value = "";
         document.getElementById("guest-email").value = "";
         document.getElementById("guest-attendees").value = "";
@@ -243,3 +294,4 @@
   </script>
 </body>
 </html>
+
